# SynthSeg

./: pyproject.toml
ext/lab2im/: edit_tensors.py  edit_volumes.py  layers.py
ext/neuron/: layers.py  models.py  utils.py
scripts/tutorials/: 1-generation_visualisation.py
src/SynthSeg/: predict_synthseg.py  training_qc.py
